--- a/scss/_customer.scss
+++ b/scss/_customer.scss
@@ -91,9 +91,7 @@ $color-red: #f53838;
     margin-right: 20px;
 }
 .owl-theme .owl-nav [class*="owl-"]:hover {
-    background: #fff3f3;
-    color: #fff;
-    text-decoration: none;
+    background: #fff;
 }
 
 @media screen and (max-width: 1200px) {
